# link-backlog

./: .gitignore  Cargo.toml  Dockerfile
.circleci/: config.yml
src/: app.rs  config.rs  main.rs
src/api/: error.rs  groups.rs  links.rs  mod.rs  oauth2.rs
src/database/entity/: api_keys.rs  grouped_links.rs  groups.rs  links.rs  mod.rs  notes.rs  prelude.rs  tagged_links.rs  tags.rs
src/database/migrations/: 0_init.sql  1_apikeys.sql  2_grouped_links_unique_index.sql
src/identity/: authz.rs  mod.rs
src/pages/: apikeys.rs  index.rs  mod.rs
src/pages/templates/: apikeys.html.tera  index.html.tera
src/pages/templates/components/: base.html.tera  navbar.html.tera
